# backendCourse

./: .dockerignore  .env-test  .gitignore  alembic.ini  docker-compose.yaml  hotels.py  main.py  pyproject.toml  pytest.ini  requirements.txt
src/: config.py  database.py  exceptions.py  main.py
src/api/: auth.py  bookings.py  dependency.py  fasilities.py  hotels.py  images.py  rooms.py
src/connectors/: redis_connector.py
src/migrations/: env.py
src/migrations/versions/: 2025_07_03_1114-0cf6f5c1f0e3_add_rooms.py  2025_07_06_1156-8fa2c135e91b_add_users.py  2025_07_06_1324-5176d748625b_table_users_add_email_unique.py  2025_07_16_1213-448e61058ef0_add_bookings.py  2025_07_21_1124-4be3d56a8ddc_add_facilities.py  3873b365bf9a_initial_migration.py  a3cbc6ffa31b_refact_rooms.py  ca7509abdd38_initial_migration.py
src/models/: __init__.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/repositories/: base.py  bookings.py  fasilities.py  hotels.py  rooms.py  users.py  utils.py
src/repositories/mappers/: base.py  mappers.py
src/services/: auth.py  base.py  bookings.py  facilities.py  hotels.py  rooms.py
src/sсhemas/: bookings.py  fasilities.py  hotel.py  rooms.py  users.py
src/tasks/: celery_app.py  tasks.py
src/utils/: db_manager.py
sсhemas/: hotel.py
tests/: conftest.py  test_bd.py
tests/integration_tests/: test_auth.py
tests/integration_tests/bookings/: test_01_bd.py  test_api.py  test_bd.py
tests/integration_tests/facilities/: test_api.py
tests/integration_tests/hotels/: test_api.py  test_bd.py
